# hw_17_12_tests

./: .coverage  pyproject.toml
hw_17_12_tests/: get.py
tests/: .coverage  test_get.py  test_index_of.py  test_slice.py
